<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Fill the options"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/_1_select_puppy_age_type"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rgroup1"
                    android:layout_marginTop="8dp"
                    >

                    <RadioButton
                        android:id="@+id/age1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/puppy"
                        android:layout_marginStart="20dp"
                      />

                    <RadioButton
                        android:id="@+id/age2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/adult"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>

                    <RadioButton
                        android:id="@+id/age3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/old"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/_2_what_type_of_lifestyle_looking"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rgroup2"
                    android:layout_marginTop="8dp"
                    >

                    <RadioButton
                        android:id="@+id/life1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="calm"
                        android:layout_marginStart="20dp"
                        />

                    <RadioButton
                        android:id="@+id/life2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Active"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>

                    <RadioButton
                        android:id="@+id/life3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Hyper"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/_3_select_dog_size"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rgroup3"
                    android:layout_marginTop="8dp"
                    >

                    <RadioButton
                        android:id="@+id/size1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/small"
                        android:layout_marginStart="20dp"
                        />

                    <RadioButton
                        android:id="@+id/size2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medium"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>

                    <RadioButton
                        android:id="@+id/size3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Large"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/_4_select_the_trainability"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rgroup4"
                    android:layout_marginTop="8dp"
                    >

                    <RadioButton
                        android:id="@+id/train1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/easy"
                        android:layout_marginStart="20dp"
                        />

                    <RadioButton
                        android:id="@+id/train2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/difficult"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>

                    <RadioButton
                        android:id="@+id/train3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hard"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/_5_select_dog_maintenance"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rgroup5"
                    android:layout_marginTop="8dp"
                    >

                    <RadioButton
                        android:id="@+id/main1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/low"
                        android:layout_marginStart="20dp"
                        />

                    <RadioButton
                        android:id="@+id/main2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>

                    <RadioButton
                        android:id="@+id/main3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/high"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/_6_dog_baking_tendency_type"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rgroup6"
                    android:layout_marginTop="8dp"
                    >

                    <RadioButton
                        android:id="@+id/bak1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/quiet"
                        android:layout_marginStart="20dp"
                        />

                    <RadioButton
                        android:id="@+id/bak2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/moderate"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>

                    <RadioButton
                        android:id="@+id/bak3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/frequent"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>
                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alata"
                    android:text="@string/_7_select_dog_friendliness_level"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rgroup7"
                    android:layout_marginTop="8dp"
                    >

                    <RadioButton
                        android:id="@+id/friend1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/aloof"
                        android:layout_marginStart="20dp"
                        />

                    <RadioButton
                        android:id="@+id/friend2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/friendly"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>

                    <RadioButton
                        android:id="@+id/friend3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/affectionate"
                        android:fontFamily="@font/alata"
                        android:layout_marginStart="20dp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="100dp"
                android:padding="20dp"
                >

                <Button
                    android:id="@+id/searchback"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Back"
                    android:backgroundTint="#FF6D6D"
                    android:fontFamily="@font/alata"
                    android:textColor="@color/white"
                    android:layout_marginRight="20dp"/>

                <Button
                    android:layout_marginLeft="40dp"
                    android:id="@+id/searchbtn"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alata"
                    android:textColor="@color/white"
                    android:backgroundTint="#FF6D6D"
                    android:text="Search" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>